CODE/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAM ID puntoCreateProgram SEMICOLON puntoCreateVarTable puntoCreateVarTableState programa1 programa2 puntoChangeStateLocal puntoCreateVarTableState puntoFillMainQuad main puntoPrintFinal
Rule 2     programa1 -> vars programa1
Rule 3     programa1 -> empty
Rule 4     programa2 -> funciones programa2
Rule 5     programa2 -> empty
Rule 6     puntoFillMainQuad -> <empty>
Rule 7     puntoCreateProgram -> <empty>
Rule 8     puntoChangeStateLocal -> <empty>
Rule 9     puntoPrintFinal -> <empty>
Rule 10    vars -> VAR ID puntoCreateVar vars1 AS vars2 vars3 puntoCreateDimension SEMICOLON
Rule 11    vars1 -> COMMA ID puntoCreateVar vars1
Rule 12    vars1 -> empty
Rule 13    vars2 -> tipo puntoCreateVarType
Rule 14    vars2 -> tipo_graph
Rule 15    vars3 -> LBRACKET CTE_INT puntoChangeDimension RBRACKET
Rule 16    vars3 -> empty
Rule 17    puntoChangeDimension -> <empty>
Rule 18    puntoCreateVarTable -> <empty>
Rule 19    puntoCreateVarTableState -> <empty>
Rule 20    puntoCreateVar -> <empty>
Rule 21    puntoCreateVarType -> <empty>
Rule 22    puntoCreateDimension -> <empty>
Rule 23    tipo -> INT puntoCurrentType
Rule 24    tipo -> FLOAT puntoCurrentType
Rule 25    tipo -> BOOL puntoCurrentType
Rule 26    tipo -> CHAR puntoCurrentType
Rule 27    puntoCurrentType -> <empty>
Rule 28    tipo_cte -> CTE_INT puntoPushInt
Rule 29    tipo_cte -> CTE_FLOAT puntoPushFloat
Rule 30    tipo_cte -> CTE_BOOL puntoPushBool
Rule 31    tipo_cte -> CTE_CHAR puntoPushChar
Rule 32    tipo_cte -> ID puntoPushID tipo_cte1
Rule 33    tipo_cte -> llamada
Rule 34    tipo_cte1 -> LBRACKET CTE_INT RBRACKET
Rule 35    tipo_cte1 -> funciones_arr
Rule 36    tipo_cte1 -> empty
Rule 37    puntoPushInt -> <empty>
Rule 38    puntoPushFloat -> <empty>
Rule 39    puntoPushBool -> <empty>
Rule 40    puntoPushChar -> <empty>
Rule 41    puntoPushID -> <empty>
Rule 42    tipo_graph -> PIECHART
Rule 43    tipo_graph -> BARGRAPH
Rule 44    tipo_graph -> PLOTLINE
Rule 45    funciones -> FUNC funciones1 ID puntoChangeStateFuncion puntoCreateVarTableState LPAREN puntoCreateParamTable funciones2 RPAREN puntoCreateParamCount bloque_modular puntoFinalFuncQuad
Rule 46    funciones1 -> VOID
Rule 47    funciones1 -> tipo
Rule 48    funciones2 -> tipo ID puntoCreateVar puntoCreateVarType puntoPushParam funciones3
Rule 49    funciones2 -> empty
Rule 50    funciones3 -> COMMA tipo ID puntoCreateVar puntoCreateVarType puntoPushParam funciones3
Rule 51    funciones3 -> empty
Rule 52    puntoChangeStateFuncion -> <empty>
Rule 53    puntoCreateParamTable -> <empty>
Rule 54    puntoPushParam -> <empty>
Rule 55    puntoCreateParamCount -> <empty>
Rule 56    puntoFinalFuncQuad -> <empty>
Rule 57    main -> VOID MAIN LPAREN RPAREN bloque_modular
Rule 58    bloque_modular -> LBLOQUE bloque_modular1 bloque_modular2 RBLOQUE
Rule 59    bloque_modular1 -> vars bloque_modular1
Rule 60    bloque_modular1 -> empty
Rule 61    bloque_modular2 -> estatuto bloque_modular2
Rule 62    bloque_modular2 -> empty
Rule 63    bloque -> LBLOQUE bloque1 RBLOQUE
Rule 64    bloque1 -> estatuto bloque1
Rule 65    bloque1 -> empty
Rule 66    estatuto -> asignacion
Rule 67    estatuto -> condicion
Rule 68    estatuto -> escritura
Rule 69    estatuto -> return
Rule 70    estatuto -> while
Rule 71    estatuto -> do_while
Rule 72    estatuto -> llamada SEMICOLON
Rule 73    asignacion -> ID puntoSaveIDAsignacion asignacion1 EQUALS asignacion2 SEMICOLON
Rule 74    asignacion1 -> LBRACKET expresion RBRACKET
Rule 75    asignacion1 -> empty
Rule 76    asignacion2 -> expresion puntoCreateAsignacionQuad
Rule 77    asignacion2 -> leida
Rule 78    puntoSaveIDAsignacion -> <empty>
Rule 79    puntoCreateAsignacionQuad -> <empty>
Rule 80    leida -> INPUT LPAREN RPAREN
Rule 81    condicion -> IF LPAREN expresion RPAREN puntoCreateIfQuad bloque condicion1 puntoFillIfQuad
Rule 82    condicion1 -> ELSE puntoCreateElseQuad bloque
Rule 83    condicion1 -> empty
Rule 84    puntoCreateIfQuad -> <empty>
Rule 85    puntoFillIfQuad -> <empty>
Rule 86    puntoCreateElseQuad -> <empty>
Rule 87    escritura -> PRINT LPAREN escritura1 RPAREN SEMICOLON
Rule 88    escritura1 -> expresion puntoCreatePrintQuad
Rule 89    escritura1 -> CTE_STRING puntoCreatePrintConstantQuad
Rule 90    puntoCreatePrintQuad -> <empty>
Rule 91    puntoCreatePrintConstantQuad -> <empty>
Rule 92    llamada -> CALL PUNTO ID puntoVerifyLlamada LPAREN llamada1 RPAREN puntoCreateGoSubQuad
Rule 93    llamada1 -> expresion puntoVerifyArgumento llamada2
Rule 94    llamada1 -> empty
Rule 95    llamada2 -> COMMA expresion puntoVerifyArgumento llamada2
Rule 96    llamada2 -> empty
Rule 97    puntoVerifyLlamada -> <empty>
Rule 98    puntoVerifyArgumento -> <empty>
Rule 99    puntoCreateGoSubQuad -> <empty>
Rule 100   return -> RETURN expresion SEMICOLON
Rule 101   while -> WHILE puntoPushSaltoWhile LPAREN expresion RPAREN puntoCreateWhileQuad bloque puntoEndWhileQuad
Rule 102   puntoPushSaltoWhile -> <empty>
Rule 103   puntoCreateWhileQuad -> <empty>
Rule 104   puntoEndWhileQuad -> <empty>
Rule 105   do_while -> DO puntoPushSaltoDoWhile bloque WHILE LPAREN expresion RPAREN puntoCreateDoWhileQuad
Rule 106   puntoPushSaltoDoWhile -> <empty>
Rule 107   puntoCreateDoWhileQuad -> <empty>
Rule 108   expresion -> compare expresion2
Rule 109   expresion2 -> AND compare
Rule 110   expresion2 -> OR compare
Rule 111   expresion2 -> empty
Rule 112   compare -> exp compare1
Rule 113   compare1 -> GREATERTHAN puntoPushOperador exp puntoOperacionRelacional
Rule 114   compare1 -> LESSTHAN puntoPushOperador exp puntoOperacionRelacional
Rule 115   compare1 -> GREATERTHANEQUAL puntoPushOperador exp puntoOperacionRelacional
Rule 116   compare1 -> LESSTHANEQUAL puntoPushOperador exp puntoOperacionRelacional
Rule 117   compare1 -> EQUALEQUAL puntoPushOperador exp puntoOperacionRelacional
Rule 118   compare1 -> NOTEQUAL puntoPushOperador exp puntoOperacionRelacional
Rule 119   compare1 -> empty
Rule 120   puntoOperacionRelacional -> <empty>
Rule 121   exp -> termino puntoSumaResta exp1
Rule 122   exp1 -> PLUS puntoPushOperador termino puntoSumaResta exp1
Rule 123   exp1 -> MINUS puntoPushOperador termino puntoSumaResta exp1
Rule 124   exp1 -> empty
Rule 125   puntoSumaResta -> <empty>
Rule 126   termino -> factor puntoMultDivide termino1
Rule 127   termino1 -> TIMES puntoPushOperador factor puntoMultDivide termino1
Rule 128   termino1 -> DIVIDE puntoPushOperador factor puntoMultDivide termino1
Rule 129   termino1 -> empty
Rule 130   puntoMultDivide -> <empty>
Rule 131   puntoPushOperador -> <empty>
Rule 132   factor -> LPAREN puntoPushFondoFalso expresion RPAREN puntoPopFondoFalso
Rule 133   factor -> tipo_cte
Rule 134   factor -> MINUS tipo_cte
Rule 135   factor -> NOT tipo_cte
Rule 136   puntoPushFondoFalso -> <empty>
Rule 137   puntoPopFondoFalso -> <empty>
Rule 138   funciones_arr -> PUNTO funciones_arr1 LPAREN RPAREN
Rule 139   funciones_arr1 -> MAX
Rule 140   funciones_arr1 -> MIN
Rule 141   funciones_arr1 -> RANGE
Rule 142   funciones_arr1 -> MEDIAN
Rule 143   funciones_arr1 -> AVERAGE
Rule 144   funciones_arr1 -> IQRANGE
Rule 145   funciones_arr1 -> STDEV
Rule 146   funciones_arr1 -> VARIANCE
Rule 147   funciones_arr1 -> MODIFY
Rule 148   funciones_arr1 -> DRAW
Rule 149   empty -> <empty>

Terminals, with rules where they appear

AND                  : 109
AS                   : 10
AVERAGE              : 143
BARGRAPH             : 43
BOOL                 : 25
CALL                 : 92
CHAR                 : 26
COMMA                : 11 50 95
CTE_BOOL             : 30
CTE_CHAR             : 31
CTE_FLOAT            : 29
CTE_INT              : 15 28 34
CTE_STRING           : 89
DIVIDE               : 128
DO                   : 105
DRAW                 : 148
ELSE                 : 82
EQUALEQUAL           : 117
EQUALS               : 73
FLOAT                : 24
FUNC                 : 45
GREATERTHAN          : 113
GREATERTHANEQUAL     : 115
ID                   : 1 10 11 32 45 48 50 73 92
IF                   : 81
INPUT                : 80
INT                  : 23
IQRANGE              : 144
LBLOQUE              : 58 63
LBRACKET             : 15 34 74
LESSTHAN             : 114
LESSTHANEQUAL        : 116
LPAREN               : 45 57 80 81 87 92 101 105 132 138
MAIN                 : 57
MAX                  : 139
MEDIAN               : 142
MIN                  : 140
MINUS                : 123 134
MODIFY               : 147
NOT                  : 135
NOTEQUAL             : 118
OR                   : 110
PIECHART             : 42
PLOTLINE             : 44
PLUS                 : 122
PRINT                : 87
PROGRAM              : 1
PUNTO                : 92 138
RANGE                : 141
RBLOQUE              : 58 63
RBRACKET             : 15 34 74
RETURN               : 100
RPAREN               : 45 57 80 81 87 92 101 105 132 138
SEMICOLON            : 1 10 72 73 87 100
STDEV                : 145
TIMES                : 127
VAR                  : 10
VARIANCE             : 146
VOID                 : 46 57
WHILE                : 101 105
error                : 

Nonterminals, with rules where they appear

asignacion           : 66
asignacion1          : 73
asignacion2          : 73
bloque               : 81 82 101 105
bloque1              : 63 64
bloque_modular       : 45 57
bloque_modular1      : 58 59
bloque_modular2      : 58 61
compare              : 108 109 110
compare1             : 112
condicion            : 67
condicion1           : 81
do_while             : 71
empty                : 3 5 12 16 36 49 51 60 62 65 75 83 94 96 111 119 124 129
escritura            : 68
escritura1           : 87
estatuto             : 61 64
exp                  : 112 113 114 115 116 117 118
exp1                 : 121 122 123
expresion            : 74 76 81 88 93 95 100 101 105 132
expresion2           : 108
factor               : 126 127 128
funciones            : 4
funciones1           : 45
funciones2           : 45
funciones3           : 48 50
funciones_arr        : 35
funciones_arr1       : 138
leida                : 77
llamada              : 33 72
llamada1             : 92
llamada2             : 93 95
main                 : 1
programa             : 0
programa1            : 1 2
programa2            : 1 4
puntoChangeDimension : 15
puntoChangeStateFuncion : 45
puntoChangeStateLocal : 1
puntoCreateAsignacionQuad : 76
puntoCreateDimension : 10
puntoCreateDoWhileQuad : 105
puntoCreateElseQuad  : 82
puntoCreateGoSubQuad : 92
puntoCreateIfQuad    : 81
puntoCreateParamCount : 45
puntoCreateParamTable : 45
puntoCreatePrintConstantQuad : 89
puntoCreatePrintQuad : 88
puntoCreateProgram   : 1
puntoCreateVar       : 10 11 48 50
puntoCreateVarTable  : 1
puntoCreateVarTableState : 1 1 45
puntoCreateVarType   : 13 48 50
puntoCreateWhileQuad : 101
puntoCurrentType     : 23 24 25 26
puntoEndWhileQuad    : 101
puntoFillIfQuad      : 81
puntoFillMainQuad    : 1
puntoFinalFuncQuad   : 45
puntoMultDivide      : 126 127 128
puntoOperacionRelacional : 113 114 115 116 117 118
puntoPopFondoFalso   : 132
puntoPrintFinal      : 1
puntoPushBool        : 30
puntoPushChar        : 31
puntoPushFloat       : 29
puntoPushFondoFalso  : 132
puntoPushID          : 32
puntoPushInt         : 28
puntoPushOperador    : 113 114 115 116 117 118 122 123 127 128
puntoPushParam       : 48 50
puntoPushSaltoDoWhile : 105
puntoPushSaltoWhile  : 101
puntoSaveIDAsignacion : 73
puntoSumaResta       : 121 122 123
puntoVerifyArgumento : 93 95
puntoVerifyLlamada   : 92
return               : 69
termino              : 121 122 123
termino1             : 126 127 128
tipo                 : 13 47 48 50
tipo_cte             : 133 134 135
tipo_cte1            : 32
tipo_graph           : 14
vars                 : 2 59
vars1                : 10 11
vars2                : 10
vars3                : 10
while                : 70

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAM ID puntoCreateProgram SEMICOLON puntoCreateVarTable puntoCreateVarTableState programa1 programa2 puntoChangeStateLocal puntoCreateVarTableState puntoFillMainQuad main puntoPrintFinal

    PROGRAM         shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PROGRAM . ID puntoCreateProgram SEMICOLON puntoCreateVarTable puntoCreateVarTableState programa1 programa2 puntoChangeStateLocal puntoCreateVarTableState puntoFillMainQuad main puntoPrintFinal

    ID              shift and go to state 3


state 3

    (1) programa -> PROGRAM ID . puntoCreateProgram SEMICOLON puntoCreateVarTable puntoCreateVarTableState programa1 programa2 puntoChangeStateLocal puntoCreateVarTableState puntoFillMainQuad main puntoPrintFinal
    (7) puntoCreateProgram -> .

    SEMICOLON       reduce using rule 7 (puntoCreateProgram -> .)

    puntoCreateProgram             shift and go to state 4

state 4

    (1) programa -> PROGRAM ID puntoCreateProgram . SEMICOLON puntoCreateVarTable puntoCreateVarTableState programa1 programa2 puntoChangeStateLocal puntoCreateVarTableState puntoFillMainQuad main puntoPrintFinal

    SEMICOLON       shift and go to state 5


state 5

    (1) programa -> PROGRAM ID puntoCreateProgram SEMICOLON . puntoCreateVarTable puntoCreateVarTableState programa1 programa2 puntoChangeStateLocal puntoCreateVarTableState puntoFillMainQuad main puntoPrintFinal
    (18) puntoCreateVarTable -> .

    VAR             reduce using rule 18 (puntoCreateVarTable -> .)
    FUNC            reduce using rule 18 (puntoCreateVarTable -> .)
    VOID            reduce using rule 18 (puntoCreateVarTable -> .)

    puntoCreateVarTable            shift and go to state 6

state 6

    (1) programa -> PROGRAM ID puntoCreateProgram SEMICOLON puntoCreateVarTable . puntoCreateVarTableState programa1 programa2 puntoChangeStateLocal puntoCreateVarTableState puntoFillMainQuad main puntoPrintFinal
    (19) puntoCreateVarTableState -> .

    VAR             reduce using rule 19 (puntoCreateVarTableState -> .)
    FUNC            reduce using rule 19 (puntoCreateVarTableState -> .)
    VOID            reduce using rule 19 (puntoCreateVarTableState -> .)

    puntoCreateVarTableState       shift and go to state 7

state 7

    (1) programa -> PROGRAM ID puntoCreateProgram SEMICOLON puntoCreateVarTable puntoCreateVarTableState . programa1 programa2 puntoChangeStateLocal puntoCreateVarTableState puntoFillMainQuad main puntoPrintFinal
    (2) programa1 -> . vars programa1
    (3) programa1 -> . empty
    (10) vars -> . VAR ID puntoCreateVar vars1 AS vars2 vars3 puntoCreateDimension SEMICOLON
    (149) empty -> .

    VAR             shift and go to state 11
    FUNC            reduce using rule 149 (empty -> .)
    VOID            reduce using rule 149 (empty -> .)

    programa1                      shift and go to state 8
    vars                           shift and go to state 9
    empty                          shift and go to state 10

state 8

    (1) programa -> PROGRAM ID puntoCreateProgram SEMICOLON puntoCreateVarTable puntoCreateVarTableState programa1 . programa2 puntoChangeStateLocal puntoCreateVarTableState puntoFillMainQuad main puntoPrintFinal
    (4) programa2 -> . funciones programa2
    (5) programa2 -> . empty
    (45) funciones -> . FUNC funciones1 ID puntoChangeStateFuncion puntoCreateVarTableState LPAREN puntoCreateParamTable funciones2 RPAREN puntoCreateParamCount bloque_modular puntoFinalFuncQuad
    (149) empty -> .

    FUNC            shift and go to state 15
    VOID            reduce using rule 149 (empty -> .)

    programa2                      shift and go to state 12
    funciones                      shift and go to state 13
    empty                          shift and go to state 14

state 9

    (2) programa1 -> vars . programa1
    (2) programa1 -> . vars programa1
    (3) programa1 -> . empty
    (10) vars -> . VAR ID puntoCreateVar vars1 AS vars2 vars3 puntoCreateDimension SEMICOLON
    (149) empty -> .

    VAR             shift and go to state 11
    FUNC            reduce using rule 149 (empty -> .)
    VOID            reduce using rule 149 (empty -> .)

    vars                           shift and go to state 9
    programa1                      shift and go to state 16
    empty                          shift and go to state 10

state 10

    (3) programa1 -> empty .

    FUNC            reduce using rule 3 (programa1 -> empty .)
    VOID            reduce using rule 3 (programa1 -> empty .)


state 11

    (10) vars -> VAR . ID puntoCreateVar vars1 AS vars2 vars3 puntoCreateDimension SEMICOLON

    ID              shift and go to state 17


state 12

    (1) programa -> PROGRAM ID puntoCreateProgram SEMICOLON puntoCreateVarTable puntoCreateVarTableState programa1 programa2 . puntoChangeStateLocal puntoCreateVarTableState puntoFillMainQuad main puntoPrintFinal
    (8) puntoChangeStateLocal -> .

    VOID            reduce using rule 8 (puntoChangeStateLocal -> .)

    puntoChangeStateLocal          shift and go to state 18

state 13

    (4) programa2 -> funciones . programa2
    (4) programa2 -> . funciones programa2
    (5) programa2 -> . empty
    (45) funciones -> . FUNC funciones1 ID puntoChangeStateFuncion puntoCreateVarTableState LPAREN puntoCreateParamTable funciones2 RPAREN puntoCreateParamCount bloque_modular puntoFinalFuncQuad
    (149) empty -> .

    FUNC            shift and go to state 15
    VOID            reduce using rule 149 (empty -> .)

    funciones                      shift and go to state 13
    programa2                      shift and go to state 19
    empty                          shift and go to state 14

state 14

    (5) programa2 -> empty .

    VOID            reduce using rule 5 (programa2 -> empty .)


state 15

    (45) funciones -> FUNC . funciones1 ID puntoChangeStateFuncion puntoCreateVarTableState LPAREN puntoCreateParamTable funciones2 RPAREN puntoCreateParamCount bloque_modular puntoFinalFuncQuad
    (46) funciones1 -> . VOID
    (47) funciones1 -> . tipo
    (23) tipo -> . INT puntoCurrentType
    (24) tipo -> . FLOAT puntoCurrentType
    (25) tipo -> . BOOL puntoCurrentType
    (26) tipo -> . CHAR puntoCurrentType

    VOID            shift and go to state 21
    INT             shift and go to state 23
    FLOAT           shift and go to state 24
    BOOL            shift and go to state 25
    CHAR            shift and go to state 26

    funciones1                     shift and go to state 20
    tipo                           shift and go to state 22

state 16

    (2) programa1 -> vars programa1 .

    FUNC            reduce using rule 2 (programa1 -> vars programa1 .)
    VOID            reduce using rule 2 (programa1 -> vars programa1 .)


state 17

    (10) vars -> VAR ID . puntoCreateVar vars1 AS vars2 vars3 puntoCreateDimension SEMICOLON
    (20) puntoCreateVar -> .

    COMMA           reduce using rule 20 (puntoCreateVar -> .)
    AS              reduce using rule 20 (puntoCreateVar -> .)

    puntoCreateVar                 shift and go to state 27

state 18

    (1) programa -> PROGRAM ID puntoCreateProgram SEMICOLON puntoCreateVarTable puntoCreateVarTableState programa1 programa2 puntoChangeStateLocal . puntoCreateVarTableState puntoFillMainQuad main puntoPrintFinal
    (19) puntoCreateVarTableState -> .

    VOID            reduce using rule 19 (puntoCreateVarTableState -> .)

    puntoCreateVarTableState       shift and go to state 28

state 19

    (4) programa2 -> funciones programa2 .

    VOID            reduce using rule 4 (programa2 -> funciones programa2 .)


state 20

    (45) funciones -> FUNC funciones1 . ID puntoChangeStateFuncion puntoCreateVarTableState LPAREN puntoCreateParamTable funciones2 RPAREN puntoCreateParamCount bloque_modular puntoFinalFuncQuad

    ID              shift and go to state 29


state 21

    (46) funciones1 -> VOID .

    ID              reduce using rule 46 (funciones1 -> VOID .)


state 22

    (47) funciones1 -> tipo .

    ID              reduce using rule 47 (funciones1 -> tipo .)


state 23

    (23) tipo -> INT . puntoCurrentType
    (27) puntoCurrentType -> .

    ID              reduce using rule 27 (puntoCurrentType -> .)
    LBRACKET        reduce using rule 27 (puntoCurrentType -> .)
    SEMICOLON       reduce using rule 27 (puntoCurrentType -> .)

    puntoCurrentType               shift and go to state 30

state 24

    (24) tipo -> FLOAT . puntoCurrentType
    (27) puntoCurrentType -> .

    ID              reduce using rule 27 (puntoCurrentType -> .)
    LBRACKET        reduce using rule 27 (puntoCurrentType -> .)
    SEMICOLON       reduce using rule 27 (puntoCurrentType -> .)

    puntoCurrentType               shift and go to state 31

state 25

    (25) tipo -> BOOL . puntoCurrentType
    (27) puntoCurrentType -> .

    ID              reduce using rule 27 (puntoCurrentType -> .)
    LBRACKET        reduce using rule 27 (puntoCurrentType -> .)
    SEMICOLON       reduce using rule 27 (puntoCurrentType -> .)

    puntoCurrentType               shift and go to state 32

state 26

    (26) tipo -> CHAR . puntoCurrentType
    (27) puntoCurrentType -> .

    ID              reduce using rule 27 (puntoCurrentType -> .)
    LBRACKET        reduce using rule 27 (puntoCurrentType -> .)
    SEMICOLON       reduce using rule 27 (puntoCurrentType -> .)

    puntoCurrentType               shift and go to state 33

state 27

    (10) vars -> VAR ID puntoCreateVar . vars1 AS vars2 vars3 puntoCreateDimension SEMICOLON
    (11) vars1 -> . COMMA ID puntoCreateVar vars1
    (12) vars1 -> . empty
    (149) empty -> .

    COMMA           shift and go to state 35
    AS              reduce using rule 149 (empty -> .)

    vars1                          shift and go to state 34
    empty                          shift and go to state 36

state 28

    (1) programa -> PROGRAM ID puntoCreateProgram SEMICOLON puntoCreateVarTable puntoCreateVarTableState programa1 programa2 puntoChangeStateLocal puntoCreateVarTableState . puntoFillMainQuad main puntoPrintFinal
    (6) puntoFillMainQuad -> .

    VOID            reduce using rule 6 (puntoFillMainQuad -> .)

    puntoFillMainQuad              shift and go to state 37

state 29

    (45) funciones -> FUNC funciones1 ID . puntoChangeStateFuncion puntoCreateVarTableState LPAREN puntoCreateParamTable funciones2 RPAREN puntoCreateParamCount bloque_modular puntoFinalFuncQuad
    (52) puntoChangeStateFuncion -> .

    LPAREN          reduce using rule 52 (puntoChangeStateFuncion -> .)

    puntoChangeStateFuncion        shift and go to state 38

state 30

    (23) tipo -> INT puntoCurrentType .

    ID              reduce using rule 23 (tipo -> INT puntoCurrentType .)
    LBRACKET        reduce using rule 23 (tipo -> INT puntoCurrentType .)
    SEMICOLON       reduce using rule 23 (tipo -> INT puntoCurrentType .)


state 31

    (24) tipo -> FLOAT puntoCurrentType .

    ID              reduce using rule 24 (tipo -> FLOAT puntoCurrentType .)
    LBRACKET        reduce using rule 24 (tipo -> FLOAT puntoCurrentType .)
    SEMICOLON       reduce using rule 24 (tipo -> FLOAT puntoCurrentType .)


state 32

    (25) tipo -> BOOL puntoCurrentType .

    ID              reduce using rule 25 (tipo -> BOOL puntoCurrentType .)
    LBRACKET        reduce using rule 25 (tipo -> BOOL puntoCurrentType .)
    SEMICOLON       reduce using rule 25 (tipo -> BOOL puntoCurrentType .)


state 33

    (26) tipo -> CHAR puntoCurrentType .

    ID              reduce using rule 26 (tipo -> CHAR puntoCurrentType .)
    LBRACKET        reduce using rule 26 (tipo -> CHAR puntoCurrentType .)
    SEMICOLON       reduce using rule 26 (tipo -> CHAR puntoCurrentType .)


state 34

    (10) vars -> VAR ID puntoCreateVar vars1 . AS vars2 vars3 puntoCreateDimension SEMICOLON

    AS              shift and go to state 39


state 35

    (11) vars1 -> COMMA . ID puntoCreateVar vars1

    ID              shift and go to state 40


state 36

    (12) vars1 -> empty .

    AS              reduce using rule 12 (vars1 -> empty .)


state 37

    (1) programa -> PROGRAM ID puntoCreateProgram SEMICOLON puntoCreateVarTable puntoCreateVarTableState programa1 programa2 puntoChangeStateLocal puntoCreateVarTableState puntoFillMainQuad . main puntoPrintFinal
    (57) main -> . VOID MAIN LPAREN RPAREN bloque_modular

    VOID            shift and go to state 42

    main                           shift and go to state 41

state 38

    (45) funciones -> FUNC funciones1 ID puntoChangeStateFuncion . puntoCreateVarTableState LPAREN puntoCreateParamTable funciones2 RPAREN puntoCreateParamCount bloque_modular puntoFinalFuncQuad
    (19) puntoCreateVarTableState -> .

    LPAREN          reduce using rule 19 (puntoCreateVarTableState -> .)

    puntoCreateVarTableState       shift and go to state 43

state 39

    (10) vars -> VAR ID puntoCreateVar vars1 AS . vars2 vars3 puntoCreateDimension SEMICOLON
    (13) vars2 -> . tipo puntoCreateVarType
    (14) vars2 -> . tipo_graph
    (23) tipo -> . INT puntoCurrentType
    (24) tipo -> . FLOAT puntoCurrentType
    (25) tipo -> . BOOL puntoCurrentType
    (26) tipo -> . CHAR puntoCurrentType
    (42) tipo_graph -> . PIECHART
    (43) tipo_graph -> . BARGRAPH
    (44) tipo_graph -> . PLOTLINE

    INT             shift and go to state 23
    FLOAT           shift and go to state 24
    BOOL            shift and go to state 25
    CHAR            shift and go to state 26
    PIECHART        shift and go to state 47
    BARGRAPH        shift and go to state 48
    PLOTLINE        shift and go to state 49

    vars2                          shift and go to state 44
    tipo                           shift and go to state 45
    tipo_graph                     shift and go to state 46

state 40

    (11) vars1 -> COMMA ID . puntoCreateVar vars1
    (20) puntoCreateVar -> .

    COMMA           reduce using rule 20 (puntoCreateVar -> .)
    AS              reduce using rule 20 (puntoCreateVar -> .)

    puntoCreateVar                 shift and go to state 50

state 41

    (1) programa -> PROGRAM ID puntoCreateProgram SEMICOLON puntoCreateVarTable puntoCreateVarTableState programa1 programa2 puntoChangeStateLocal puntoCreateVarTableState puntoFillMainQuad main . puntoPrintFinal
    (9) puntoPrintFinal -> .

    $end            reduce using rule 9 (puntoPrintFinal -> .)

    puntoPrintFinal                shift and go to state 51

state 42

    (57) main -> VOID . MAIN LPAREN RPAREN bloque_modular

    MAIN            shift and go to state 52


state 43

    (45) funciones -> FUNC funciones1 ID puntoChangeStateFuncion puntoCreateVarTableState . LPAREN puntoCreateParamTable funciones2 RPAREN puntoCreateParamCount bloque_modular puntoFinalFuncQuad

    LPAREN          shift and go to state 53


state 44

    (10) vars -> VAR ID puntoCreateVar vars1 AS vars2 . vars3 puntoCreateDimension SEMICOLON
    (15) vars3 -> . LBRACKET CTE_INT puntoChangeDimension RBRACKET
    (16) vars3 -> . empty
    (149) empty -> .

    LBRACKET        shift and go to state 55
    SEMICOLON       reduce using rule 149 (empty -> .)

    vars3                          shift and go to state 54
    empty                          shift and go to state 56

state 45

    (13) vars2 -> tipo . puntoCreateVarType
    (21) puntoCreateVarType -> .

    LBRACKET        reduce using rule 21 (puntoCreateVarType -> .)
    SEMICOLON       reduce using rule 21 (puntoCreateVarType -> .)

    puntoCreateVarType             shift and go to state 57

state 46

    (14) vars2 -> tipo_graph .

    LBRACKET        reduce using rule 14 (vars2 -> tipo_graph .)
    SEMICOLON       reduce using rule 14 (vars2 -> tipo_graph .)


state 47

    (42) tipo_graph -> PIECHART .

    LBRACKET        reduce using rule 42 (tipo_graph -> PIECHART .)
    SEMICOLON       reduce using rule 42 (tipo_graph -> PIECHART .)


state 48

    (43) tipo_graph -> BARGRAPH .

    LBRACKET        reduce using rule 43 (tipo_graph -> BARGRAPH .)
    SEMICOLON       reduce using rule 43 (tipo_graph -> BARGRAPH .)


state 49

    (44) tipo_graph -> PLOTLINE .

    LBRACKET        reduce using rule 44 (tipo_graph -> PLOTLINE .)
    SEMICOLON       reduce using rule 44 (tipo_graph -> PLOTLINE .)


state 50

    (11) vars1 -> COMMA ID puntoCreateVar . vars1
    (11) vars1 -> . COMMA ID puntoCreateVar vars1
    (12) vars1 -> . empty
    (149) empty -> .

    COMMA           shift and go to state 35
    AS              reduce using rule 149 (empty -> .)

    vars1                          shift and go to state 58
    empty                          shift and go to state 36

state 51

    (1) programa -> PROGRAM ID puntoCreateProgram SEMICOLON puntoCreateVarTable puntoCreateVarTableState programa1 programa2 puntoChangeStateLocal puntoCreateVarTableState puntoFillMainQuad main puntoPrintFinal .

    $end            reduce using rule 1 (programa -> PROGRAM ID puntoCreateProgram SEMICOLON puntoCreateVarTable puntoCreateVarTableState programa1 programa2 puntoChangeStateLocal puntoCreateVarTableState puntoFillMainQuad main puntoPrintFinal .)


state 52

    (57) main -> VOID MAIN . LPAREN RPAREN bloque_modular

    LPAREN          shift and go to state 59


state 53

    (45) funciones -> FUNC funciones1 ID puntoChangeStateFuncion puntoCreateVarTableState LPAREN . puntoCreateParamTable funciones2 RPAREN puntoCreateParamCount bloque_modular puntoFinalFuncQuad
    (53) puntoCreateParamTable -> .

    INT             reduce using rule 53 (puntoCreateParamTable -> .)
    FLOAT           reduce using rule 53 (puntoCreateParamTable -> .)
    BOOL            reduce using rule 53 (puntoCreateParamTable -> .)
    CHAR            reduce using rule 53 (puntoCreateParamTable -> .)
    RPAREN          reduce using rule 53 (puntoCreateParamTable -> .)

    puntoCreateParamTable          shift and go to state 60

state 54

    (10) vars -> VAR ID puntoCreateVar vars1 AS vars2 vars3 . puntoCreateDimension SEMICOLON
    (22) puntoCreateDimension -> .

    SEMICOLON       reduce using rule 22 (puntoCreateDimension -> .)

    puntoCreateDimension           shift and go to state 61

state 55

    (15) vars3 -> LBRACKET . CTE_INT puntoChangeDimension RBRACKET

    CTE_INT         shift and go to state 62


state 56

    (16) vars3 -> empty .

    SEMICOLON       reduce using rule 16 (vars3 -> empty .)


state 57

    (13) vars2 -> tipo puntoCreateVarType .

    LBRACKET        reduce using rule 13 (vars2 -> tipo puntoCreateVarType .)
    SEMICOLON       reduce using rule 13 (vars2 -> tipo puntoCreateVarType .)


state 58

    (11) vars1 -> COMMA ID puntoCreateVar vars1 .

    AS              reduce using rule 11 (vars1 -> COMMA ID puntoCreateVar vars1 .)


state 59

    (57) main -> VOID MAIN LPAREN . RPAREN bloque_modular

    RPAREN          shift and go to state 63


state 60
